# tap-phenom

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  meltano.yml  pyproject.toml
.github/workflows/: build.yml  test.yml
tap_phenom/: __init__.py  __main__.py  client.py  streams.py  tap.py
tests/: test_core.py
